--- a/themes/soho/layouts/_default/list.html
+++ b/themes/soho/layouts/_default/list.html
@@ -1,13 +1,17 @@
 {{ define "main" -}}
 <ul class="posts">
   <h1>{{ .Title }}</h1>
-  {{ range .Data.Pages -}}
+  {{ range .Pages }}
   <li>
-    <div class="flex">
-      <a href="{{ .Permalink }}" class="truncate">{{ .Title }}</a>
-      {{ if eq .Kind "page" }}
-      <time class="nowrap" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
-      {{ end }}
+    <div class="post-preview">
+      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
+      <p>{{ .Summary }}</p>
+      <div class="post-footer">
+        <a href="{{ .Permalink }}" class="read-more">Read More</a>
+        {{ if eq .Kind "page" }}
+        <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+        {{ end }}
+      </div>
     </div>
   </li>
   {{- end }}
