--- a/themes/soho/layouts/_default/baseof.html
+++ b/themes/soho/layouts/_default/baseof.html
@@ -15,39 +15,19 @@
 
   {{ partial "seo.html" . }}
 
-  <link type="text/css"
-        rel="stylesheet"
-        href="{{ `css/print.css` | relURL }}"
-        media="print">
-
-  <link type="text/css"
-        rel="stylesheet"
-        href="{{ `css/poole.css` | relURL }}">
-
-  <link type="text/css"
-        rel="stylesheet"
-        href="{{ `css/hyde.css` | relURL }}">
-
+  <link type="text/css" rel="stylesheet" href="{{ `css/print.css` | relURL }}" media="print">
+  <link type="text/css" rel="stylesheet" href="{{ `css/poole.css` | relURL }}">
+  <link type="text/css" rel="stylesheet" href="{{ `css/hyde.css` | relURL }}">
   {{ partial "theme-color.html" . }}
 
   {{ range $.Site.Params.customCss -}}
   <link type="text/css" rel="stylesheet" href="{{ . | relURL }}">
   {{- end}}
 
-  <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
-
-  <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
-        integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
-        crossorigin="anonymous" />
-
-  <link rel="apple-touch-icon-precomposed"
-        sizes="144x144"
-        href="/apple-touch-icon-144-precomposed.png">
-
-  <link rel="icon" type="image/png" href="/favicon.png">
-  
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="/apple-touch-icon-144-precomposed.png">
+  <link rel="icon" type="image/png" href="{{ "favicon.png" | relURL }}">
 
   <!-- RSS -->
   {{ range .AlternativeOutputFormats -}}
@@ -63,10 +43,7 @@
 
   {{ partial "footer.html" . }}
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js"
-          integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0="
-          crossorigin="anonymous"></script>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/js/all.min.js" integrity="sha256-MAgcygDRahs+F/Nk5Vz387whB4kSK9NXlDN3w58LLq0=" crossorigin="anonymous"></script>
 
   <script src="{{ `js/jquery.min.js` | relURL }}"></script>
   <script src="{{ `js/soho.js` | relURL }}"></script>
@@ -75,8 +52,8 @@
   <script src="{{ . | relURL }}"></script>
   {{- end}}
 
-    {{ if not hugo.IsServer }}
-      {{ template "_internal/google_analytics.html" . }}
-    {{ end }}
+  {{ if not hugo.IsServer }}
+    {{ template "_internal/google_analytics.html" . }}
+  {{ end }}
 </body>
 </html>
