--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,38 @@
 {{ define "main" -}}
-  <div class="posts">
-    {{- $pages := where .Site.RegularPages "Type" "in" .Site.Params.MainSections -}}
-    {{- $paginator := .Paginate $pages -}}
-
-    {{ range $paginator.Pages }}
-      <article class="post">
-        <h1 class="post-title">
-          {{ .Title }}
-        </h1>
-
-        <div>
+  <div class="homepage">
+    {{ if .IsHome }}
+      <div class="home-content">
+        {{ with .Site.GetPage "homepage/home" }}
           {{ .Content }}
-        </div>
-      </article>
-    {{- end }}
-  </div>
+        {{ end }}
+      </div>
+    {{ else }}
+      <div class="posts">
+        {{- $pages := where .Site.RegularPages "Type" "posts" -}}
+        {{- $paginator := .Paginate $pages -}}
 
-  {{ template "_internal/pagination.html" . }}
+        {{ range $paginator.Pages }}
+          <article class="post">
+            <h1 class="post-title">
+              <a href="{{ .Permalink }}">{{ .Title }}</a>
+            </h1>
+
+            <div class="post-date">
+              <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time> &middot; {{ .ReadingTime }} min read
+            </div>
+
+            <div>
+              {{ .Summary }}
+            </div>
+
+            <div class="read-more-link">
+              <a href="{{ .Permalink }}">Read More</a>
+            </div>
+          </article>
+        {{- end }}
+      </div>
+
+      {{ template "_internal/pagination.html" . }}
+    {{ end }}
+  </div>
 {{- end }}
