--- a/layouts/layouts/_default/list.html
+++ b/layouts/layouts/_default/list.html
@@ -1,15 +1,22 @@
 {{ define "main" -}}
 <ul class="posts">
   <h1>{{ .Title }}</h1>
-  {{ range .Data.Pages -}}
+  {{ range .Pages }}
   <li>
     <div class="post-preview">
       <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      <p>{{ .Summary }}</p>
-      <a href="{{ .Permalink }}" class="read-more">Read More</a>
-      {{ if eq .Kind "page" }}
-      <time class="nowrap" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
-      {{ end }}
+      <div class="post-content-wrapper">
+        <div class="post-content">
+          <p>{{ .Summary }}</p>
+          <a href="{{ .Permalink }}" class="read-more">Read More</a>
+          {{ if eq .Kind "page" }}
+          <time class="nowrap" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+          {{ end }}
+        </div>
+        {{ with .Params.image }}
+        <img src="{{ . }}" alt="{{ $.Title }}" class="post-image">
+        {{ end }}
+      </div>
     </div>
   </li>
   {{- end }}
