--- a/themes/soho/layouts/_default/list.html
+++ b/themes/soho/layouts/_default/list.html
@@ -5,11 +5,16 @@
   <li>
     <div class="post-preview">
       <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      <p>{{ .Summary }}</p>
-      <div class="post-footer">
-        <a href="{{ .Permalink }}" class="read-more">Read More</a>
-        {{ if eq .Kind "page" }}
-        <time class="post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+      <div class="post-content-wrapper">
+        <div class="post-content">
+          <p>{{ .Summary }}</p>
+          <a href="{{ .Permalink }}" class="read-more">Read More</a>
+          {{ if eq .Kind "page" }}
+          <time class="nowrap" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
+          {{ end }}
+        </div>
+        {{ with .Params.image }}
+        <img src="{{ . }}" alt="{{ $.Title }}" class="post-image">
         {{ end }}
       </div>
     </div>
