--- a/themes/soho/layouts/_default/baseof.html
+++ b/themes/soho/layouts/_default/baseof.html
@@ -38,7 +38,7 @@
 <body>
   {{ partial "sidebar.html" . }}
 
-  <main class="content container">
+  <main class="content container main-content">
   {{ block "main" . -}}{{- end }}
   </main>
 
