--- a/themes/soho/layouts/_default/single.html
+++ b/themes/soho/layouts/_default/single.html
@@ -3,15 +3,32 @@
   <h1 class="title">{{ .Title }}</h1>
   {{ with .Params.tagline }}<span class="tagline">{{ . }}</span>{{ end }}
 
-  {{ if ne .Type "page" -}}
+  {{ if eq .Type "page" -}}
+  <div>
+    {{ .Content }}
+  </div>
+  {{ else if eq .Title "Home" }}
+  <div>
+    {{ .Content }}
+    <div class="two-columns">
+      <div class="column">
+        <!-- Content for the first column -->
+        <p>First column content goes here.</p>
+      </div>
+      <div class="column">
+        <!-- Content for the second column -->
+        <p>Second column content goes here.</p>
+      </div>
+    </div>
+  </div>
+  {{ else }}
   <div class="post-date">
     <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time> <span class="readtime">&middot; {{ .ReadingTime }} min read</span>
   </div>
-  {{- end }}
-
   <div>
-  {{ .Content }}
+    {{ .Content }}
   </div>
+  {{ end }}
 
   {{ partial "tags.html" . }}
 
