--- a/themes/soho/layouts/_default/baseof.html
+++ b/themes/soho/layouts/_default/baseof.html
@@ -26,6 +26,7 @@
   <!-- Load custom CSS after other CSS files to ensure it takes precedence -->
   {{ range $.Site.Params.customCss -}}
   <link type="text/css" rel="stylesheet" href="{{ `css/syntax.css` | relURL }}">
+  <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
   {{- end}}
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700&display=swap">
