--- a/themes/soho/layouts/partials/head.html
+++ b/themes/soho/layouts/partials/head.html
@@ -4,4 +4,5 @@
   <title>{{ .Title }}</title>
   <link rel="stylesheet" href="{{ "css/poole.css" | relURL }}">
   <link rel="stylesheet" href="{{ "css/hyde.css" | relURL }}">
+  <link rel="stylesheet" href="{{ "/css/custom.css" | relURL }}">
 </head>
