--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,26 +1,26 @@
 {{ define "main" -}}
-<ul class="posts">
+<section class="posts">
   <h1>{{ .Title }}</h1>
   {{ range .Pages }}
-  <li>
-    <div class="post-preview">
-      <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
-      <div class="post-content-wrapper">
-        <div class="post-content">
-          <p>{{ .Summary }}</p>
-          <div class="post-footer">
-            <a href="{{ .Permalink }}" class="read-more">Read More</a>
-            {{ if eq .Kind "page" }}
-            <time class="nowrap post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
-            {{ end }}
-          </div>
-        </div>
-        {{ with .Params.image }}
-        <img src="{{ . }}" alt="{{ $.Title }}" class="post-image">
+  <div class="project-card">
+    <div class="project-content">
+      <h3 class="post-title">
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+      </h3>
+      <p>{{ .Summary }}</p>
+      <div class="read-more-link">
+        <a href="{{ .Permalink }}" class="read-more">Read More</a>
+        {{ if eq .Kind "page" }}
+        <time class="nowrap post-date" datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time>
         {{ end }}
       </div>
     </div>
-  </li>
+    {{ with .Params.image }}
+    <div class="project-image">
+      <img src="{{ . }}" alt="{{ $.Title }}">
+    </div>
+    {{ end }}
+  </div>
   {{- end }}
-</ul>
+</section>
 {{- end }}
