--- a/themes/soho/layouts/index.html
+++ b/themes/soho/layouts/index.html
@@ -1,38 +1,53 @@
 {{ define "main" -}}
-  <div class="homepage">
-    {{ if .IsHome }}
-      <div class="home-content">
-        {{ with .Site.GetPage "homepage/home" }}
-          {{ .Content }}
-        {{ end }}
+<div class="homepage">
+  {{ if .IsHome }}
+    <div class="home-content">
+      {{ with .Site.GetPage "homepage/home" }}
+        {{ .Content }}
+      {{ end }}
+    </div>
+
+    <section class="projects">
+      <h2>My Projects</h2>
+      {{ range first 3 (where .Site.RegularPages "Type" "posts") }}
+      <div class="project-card">
+        <div class="project-content">
+          <h3 class="post-title">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+          </h3>
+          <p>{{ .Summary }}</p>
+          <div class="read-more-link">
+            <a href="{{ .Permalink }}" class="read-more">Read More</a>
+          </div>
+        </div>
+        <div class="project-image">
+          <img src="{{ with .Params.image }}{{ . }}{{ else }}/images/default-project.jpg{{ end }}" alt="{{ .Title }}">
+        </div>
       </div>
-    {{ else }}
-      <div class="posts">
-        {{- $pages := where .Site.RegularPages "Type" "posts" -}}
-        {{- $paginator := .Paginate $pages -}}
+      {{ end }}
+    </section>
 
-        {{ range $paginator.Pages }}
-          <article class="post">
-            <h1 class="post-title">
-              <a href="{{ .Permalink }}">{{ .Title }}</a>
-            </h1>
-
-            <div class="post-date">
-              <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z0700" }}">{{ .Date.Format "Jan 2, 2006" }}</time> &middot; {{ .ReadingTime }} min read
-            </div>
-
-            <div>
-              {{ .Summary }}
-            </div>
-
-            <div class="read-more-link">
-              <a href="{{ .Permalink }}">Read More</a>
-            </div>
-          </article>
-        {{- end }}
+    <section class="posts">
+      <h2>Blog Posts</h2>
+      {{ range .Pages }}
+      <div class="project-card">
+        <div class="project-content">
+          <h3 class="post-title">
+            <a href="{{ .Permalink }}">{{ .Title }}</a>
+          </h3>
+          <p>{{ .Summary }}</p>
+          <div class="read-more-link">
+            <a href="{{ .Permalink }}" class="read-more">Read More</a>
+          </div>
+        </div>
+        <div class="project-image">
+          <img src="{{ with .Params.image }}{{ . }}{{ else }}/images/default-project.jpg{{ end }}" alt="{{ .Title }}">
+        </div>
       </div>
+      {{ end }}
+    </section>
 
-      {{ template "_internal/pagination.html" . }}
-    {{ end }}
-  </div>
+    {{ template "_internal/pagination.html" . }}
+  {{ end }}
+</div>
 {{- end }}
