--- a/layouts/shortcodes/about-card.html
+++ b/layouts/shortcodes/about-card.html
@@ -1,12 +1,13 @@
 <div class="about-card">
     <h3><a href="/about/">See more about me</a></h3>
     <div class="about-card-content">
-      <div class="about-card-image">
-        <img src="/images/bikepic.jpg" alt="See more about me">
-      </div>
-      <div class="about-card-text">
-        <p> Take a look at my biking, hiking, and my favourite books. </p>
-      </div>
+        <div class="about-card-image">
+            <a href="/about/">
+                <img src="/images/bikepic.jpg" alt="See more about me">
+            </a>
+        </div>
+        <div class="about-card-text">
+            <p> Take a look at my biking, hiking, favourite books and video games. </p>
+        </div>
     </div>
-  </div>
-  
+</div>
