--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -128,7 +128,7 @@ footer {
   height: 40px;
   padding: 1rem 0;
   margin: 0 1rem;
-  border-top: 1px solid #924a08;
+  border-top: 1px solid #015220;
 }
 
 
@@ -450,10 +450,4 @@ body .homepage .home-content a:hover {
 }
 
 
-hr.green {
-  border: none; /* Remove default border */
-  height: 1px; /* Height of the line */
-  background-color: #34704e; /* Line color */
-  margin: 2rem 0; /* Vertical spacing around the line */
-  width: 100%; /* Ensure the line spans the entire width */
-}
+
